--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/x-data-grid": "^7.3.2",
-    "@mui/x-date-pickers": "^7.3.2",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "date-fns": "^3.6.0",
-    "dayjs": "^1.11.11",
     "json-server": "^1.0.0-alpha.23",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
